@@ -1006,14 +1006,6 @@ static InputInfoPtr xf86WcmInit(InputDriverPtr drv, IDevPtr dev, int flags)
 		xf86Msg(X_CONFIG, "%s: buttons only\n", dev->identifier);
 	}
 
-	/* YHJ - temporarily enable button 4/5 simulation by default */
-	if (xf86SetBoolOption(local->options, "MouseWheel", 0 /* JEJ - disabled */))
-	{
-		priv->flags |= FAKE_MOUSEWHEEL_FLAG;
-		xf86Msg(X_CONFIG, "%s: mouse scrolling simulation enabled\n",
-			dev->identifier);
-	}
-
 	for (i=0; i<16; i++)
 	{
 		sprintf(b, "Button%d", i+1);
